[package]
name = "rust_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.10"
pest = "2.5.5"
pest_derive = "2.5.5"
rand = "0.8.5"
serde = { version="1.0.152", features= ["derive"] }
serde_json = "1.0.94"
